Save requested datasets to data/interim folder
... without tracking changes in datasets.

--- a/notebooks/01-Request-and-download-data.ipynb
+++ b/notebooks/01-Request-and-download-data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 78,
    "id": "231381dd",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 79,
    "id": "c8cc4f69",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 80,
    "id": "d9004d0b",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 81,
    "id": "b4949151",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 82,
    "id": "86144467",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 83,
    "id": "fbf33ed3",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 84,
    "id": "38249131",
    "metadata": {},
    "outputs": [],
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 85,
    "id": "1a56034e",
    "metadata": {},
    "outputs": [
@@ -257,7 +257,7 @@
      "output_type": "stream",
      "text": [
       "Downloading 15 data file(s) from the OOI Gold Copy THREDSS catalog\n",
-      "Downloading and Processing Data Files: 100%|██████████| 15/15 [00:18<00:00,  1.21s/it]\n"
+      "Downloading and Processing Data Files: 100%|██████████| 15/15 [00:17<00:00,  1.19s/it]\n"
      ]
     }
    ],
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 86,
    "id": "cfb1da0e",
    "metadata": {},
    "outputs": [],
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 87,
    "id": "53b4dba9",
    "metadata": {},
    "outputs": [],
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 88,
    "id": "dd20da06",
    "metadata": {},
    "outputs": [
@@ -327,7 +327,7 @@
        " 'goldCopy_dodsC': 'https://thredds.dataexplorer.oceanobservatories.org/thredds/dodsC/'}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 89,
    "id": "182d8620",
    "metadata": {},
    "outputs": [
@@ -359,7 +359,7 @@
        "'https://ooinet-dev1-west.intra.oceanobservatories.org/api/m2m/12576/sensor/inv'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 90,
    "id": "af37e005",
    "metadata": {},
    "outputs": [],
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 91,
    "id": "1d340c82",
    "metadata": {},
    "outputs": [],
@@ -413,23 +413,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 92,
    "id": "94671452",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'requestUUID': '7bd65088-7af1-4265-aaba-7285a372c695',\n",
-       " 'outputURL': 'https://opendap-dev1-west.intra.oceanobservatories.org/thredds/catalog/ooi/kylene.cooley@whoi.edu/20230410T161638159Z-CP01CNSM-MFD35-05-PCO2WB000-recovered_inst-pco2w_abc_instrument/catalog.html',\n",
-       " 'allURLs': ['https://opendap-dev1-west.intra.oceanobservatories.org/thredds/catalog/ooi/kylene.cooley@whoi.edu/20230410T161638159Z-CP01CNSM-MFD35-05-PCO2WB000-recovered_inst-pco2w_abc_instrument/catalog.html',\n",
-       "  'https://downloads-dev1-west.intra.oceanobservatories.org/async_results/kylene.cooley@whoi.edu/20230410T161638159Z-CP01CNSM-MFD35-05-PCO2WB000-recovered_inst-pco2w_abc_instrument'],\n",
+       "{'requestUUID': 'e55e5b4d-8eb5-449a-b740-ff130e31339a',\n",
+       " 'outputURL': 'https://opendap-dev1-west.intra.oceanobservatories.org/thredds/catalog/ooi/kylene.cooley@whoi.edu/20230410T184315707Z-CP01CNSM-MFD35-05-PCO2WB000-recovered_inst-pco2w_abc_instrument/catalog.html',\n",
+       " 'allURLs': ['https://opendap-dev1-west.intra.oceanobservatories.org/thredds/catalog/ooi/kylene.cooley@whoi.edu/20230410T184315707Z-CP01CNSM-MFD35-05-PCO2WB000-recovered_inst-pco2w_abc_instrument/catalog.html',\n",
+       "  'https://downloads-dev1-west.intra.oceanobservatories.org/async_results/kylene.cooley@whoi.edu/20230410T184315707Z-CP01CNSM-MFD35-05-PCO2WB000-recovered_inst-pco2w_abc_instrument'],\n",
        " 'sizeCalculation': 681812,\n",
        " 'timeCalculation': 60,\n",
        " 'numberOfSubJobs': 14}"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 93,
    "id": "bd7c0d0c",
    "metadata": {},
    "outputs": [
@@ -458,7 +458,7 @@
        " 'https://opendap-dev1-west.intra.oceanobservatories.org/thredds/dodsC/ooi/kylene.cooley@whoi.edu/20230410T161638159Z-CP01CNSM-MFD35-05-PCO2WB000-recovered_inst-pco2w_abc_instrument/deployment0008_CP01CNSM-MFD35-05-PCO2WB000-recovered_inst-pco2w_abc_instrument_20180101T000009-20180329T190009.nc']"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3472,49 +3472,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 94,
    "id": "1280270f",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "PermissionError",
-     "evalue": "[Errno 13] Permission denied: b'c:\\\\Users\\\\cooleyky\\\\Documents\\\\GitHub\\\\qartod_testing\\\\data\\\\interim'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[1;32mc:\\Users\\cooleyky\\Anaconda3\\lib\\site-packages\\xarray\\backends\\file_manager.py:209\u001b[0m, in \u001b[0;36mCachingFileManager._acquire_with_cache_info\u001b[1;34m(self, needs_lock)\u001b[0m\n\u001b[0;32m    208\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m--> 209\u001b[0m     file \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_cache[\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_key]\n\u001b[0;32m    210\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m:\n",
-      "File \u001b[1;32mc:\\Users\\cooleyky\\Anaconda3\\lib\\site-packages\\xarray\\backends\\lru_cache.py:55\u001b[0m, in \u001b[0;36mLRUCache.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m     54\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_lock:\n\u001b[1;32m---> 55\u001b[0m     value \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_cache[key]\n\u001b[0;32m     56\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_cache\u001b[39m.\u001b[39mmove_to_end(key)\n",
-      "\u001b[1;31mKeyError\u001b[0m: [<class 'netCDF4._netCDF4.Dataset'>, ('c:\\\\Users\\\\cooleyky\\\\Documents\\\\GitHub\\\\qartod_testing\\\\data\\\\interim',), 'a', (('clobber', True), ('diskless', False), ('format', 'NETCDF4'), ('persist', False)), '2329cf2f-1fe3-4a67-b0a2-34976e1a3107']",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mPermissionError\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[61], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# something along the lines of write_nc(), xr.save_dataset?\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[39m# call the data file datasets_for_testing.nc \u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[39m# I think we will test datasets in production and development separately, so maybe making separate files for those types\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m ds_dev\u001b[39m.\u001b[39;49mto_netcdf(path\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39m../data/interim/\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
-      "File \u001b[1;32mc:\\Users\\cooleyky\\Anaconda3\\lib\\site-packages\\xarray\\core\\dataset.py:1903\u001b[0m, in \u001b[0;36mDataset.to_netcdf\u001b[1;34m(self, path, mode, format, group, engine, encoding, unlimited_dims, compute, invalid_netcdf)\u001b[0m\n\u001b[0;32m   1900\u001b[0m     encoding \u001b[39m=\u001b[39m {}\n\u001b[0;32m   1901\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mbackends\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mapi\u001b[39;00m \u001b[39mimport\u001b[39;00m to_netcdf\n\u001b[1;32m-> 1903\u001b[0m \u001b[39mreturn\u001b[39;00m to_netcdf(  \u001b[39m# type: ignore  # mypy cannot resolve the overloads:(\u001b[39;49;00m\n\u001b[0;32m   1904\u001b[0m     \u001b[39mself\u001b[39;49m,\n\u001b[0;32m   1905\u001b[0m     path,\n\u001b[0;32m   1906\u001b[0m     mode\u001b[39m=\u001b[39;49mmode,\n\u001b[0;32m   1907\u001b[0m     \u001b[39mformat\u001b[39;49m\u001b[39m=\u001b[39;49m\u001b[39mformat\u001b[39;49m,\n\u001b[0;32m   1908\u001b[0m     group\u001b[39m=\u001b[39;49mgroup,\n\u001b[0;32m   1909\u001b[0m     engine\u001b[39m=\u001b[39;49mengine,\n\u001b[0;32m   1910\u001b[0m     encoding\u001b[39m=\u001b[39;49mencoding,\n\u001b[0;32m   1911\u001b[0m     unlimited_dims\u001b[39m=\u001b[39;49munlimited_dims,\n\u001b[0;32m   1912\u001b[0m     compute\u001b[39m=\u001b[39;49mcompute,\n\u001b[0;32m   1913\u001b[0m     multifile\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m,\n\u001b[0;32m   1914\u001b[0m     invalid_netcdf\u001b[39m=\u001b[39;49minvalid_netcdf,\n\u001b[0;32m   1915\u001b[0m )\n",
-      "File \u001b[1;32mc:\\Users\\cooleyky\\Anaconda3\\lib\\site-packages\\xarray\\backends\\api.py:1213\u001b[0m, in \u001b[0;36mto_netcdf\u001b[1;34m(dataset, path_or_file, mode, format, group, engine, encoding, unlimited_dims, compute, multifile, invalid_netcdf)\u001b[0m\n\u001b[0;32m   1209\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m   1210\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m   1211\u001b[0m             \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39munrecognized option \u001b[39m\u001b[39m'\u001b[39m\u001b[39minvalid_netcdf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m for engine \u001b[39m\u001b[39m{\u001b[39;00mengine\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1212\u001b[0m         )\n\u001b[1;32m-> 1213\u001b[0m store \u001b[39m=\u001b[39m store_open(target, mode, \u001b[39mformat\u001b[39m, group, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m   1215\u001b[0m \u001b[39mif\u001b[39;00m unlimited_dims \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m   1216\u001b[0m     unlimited_dims \u001b[39m=\u001b[39m dataset\u001b[39m.\u001b[39mencoding\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39munlimited_dims\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mNone\u001b[39;00m)\n",
-      "File \u001b[1;32mc:\\Users\\cooleyky\\Anaconda3\\lib\\site-packages\\xarray\\backends\\netCDF4_.py:376\u001b[0m, in \u001b[0;36mNetCDF4DataStore.open\u001b[1;34m(cls, filename, mode, format, group, clobber, diskless, persist, lock, lock_maker, autoclose)\u001b[0m\n\u001b[0;32m    370\u001b[0m kwargs \u001b[39m=\u001b[39m \u001b[39mdict\u001b[39m(\n\u001b[0;32m    371\u001b[0m     clobber\u001b[39m=\u001b[39mclobber, diskless\u001b[39m=\u001b[39mdiskless, persist\u001b[39m=\u001b[39mpersist, \u001b[39mformat\u001b[39m\u001b[39m=\u001b[39m\u001b[39mformat\u001b[39m\n\u001b[0;32m    372\u001b[0m )\n\u001b[0;32m    373\u001b[0m manager \u001b[39m=\u001b[39m CachingFileManager(\n\u001b[0;32m    374\u001b[0m     netCDF4\u001b[39m.\u001b[39mDataset, filename, mode\u001b[39m=\u001b[39mmode, kwargs\u001b[39m=\u001b[39mkwargs\n\u001b[0;32m    375\u001b[0m )\n\u001b[1;32m--> 376\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mcls\u001b[39;49m(manager, group\u001b[39m=\u001b[39;49mgroup, mode\u001b[39m=\u001b[39;49mmode, lock\u001b[39m=\u001b[39;49mlock, autoclose\u001b[39m=\u001b[39;49mautoclose)\n",
-      "File \u001b[1;32mc:\\Users\\cooleyky\\Anaconda3\\lib\\site-packages\\xarray\\backends\\netCDF4_.py:323\u001b[0m, in \u001b[0;36mNetCDF4DataStore.__init__\u001b[1;34m(self, manager, group, mode, lock, autoclose)\u001b[0m\n\u001b[0;32m    321\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_group \u001b[39m=\u001b[39m group\n\u001b[0;32m    322\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_mode \u001b[39m=\u001b[39m mode\n\u001b[1;32m--> 323\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mformat \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mds\u001b[39m.\u001b[39mdata_model\n\u001b[0;32m    324\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_filename \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mds\u001b[39m.\u001b[39mfilepath()\n\u001b[0;32m    325\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mis_remote \u001b[39m=\u001b[39m is_remote_uri(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_filename)\n",
-      "File \u001b[1;32mc:\\Users\\cooleyky\\Anaconda3\\lib\\site-packages\\xarray\\backends\\netCDF4_.py:385\u001b[0m, in \u001b[0;36mNetCDF4DataStore.ds\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    383\u001b[0m \u001b[39m@property\u001b[39m\n\u001b[0;32m    384\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mds\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[1;32m--> 385\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_acquire()\n",
-      "File \u001b[1;32mc:\\Users\\cooleyky\\Anaconda3\\lib\\site-packages\\xarray\\backends\\netCDF4_.py:379\u001b[0m, in \u001b[0;36mNetCDF4DataStore._acquire\u001b[1;34m(self, needs_lock)\u001b[0m\n\u001b[0;32m    378\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_acquire\u001b[39m(\u001b[39mself\u001b[39m, needs_lock\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m):\n\u001b[1;32m--> 379\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_manager\u001b[39m.\u001b[39macquire_context(needs_lock) \u001b[39mas\u001b[39;00m root:\n\u001b[0;32m    380\u001b[0m         ds \u001b[39m=\u001b[39m _nc4_require_group(root, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_group, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_mode)\n\u001b[0;32m    381\u001b[0m     \u001b[39mreturn\u001b[39;00m ds\n",
-      "File \u001b[1;32mc:\\Users\\cooleyky\\Anaconda3\\lib\\contextlib.py:119\u001b[0m, in \u001b[0;36m_GeneratorContextManager.__enter__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    117\u001b[0m \u001b[39mdel\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39margs, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mkwds, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfunc\n\u001b[0;32m    118\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m--> 119\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mnext\u001b[39;49m(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mgen)\n\u001b[0;32m    120\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mStopIteration\u001b[39;00m:\n\u001b[0;32m    121\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mRuntimeError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mgenerator didn\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt yield\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39m\n",
-      "File \u001b[1;32mc:\\Users\\cooleyky\\Anaconda3\\lib\\site-packages\\xarray\\backends\\file_manager.py:197\u001b[0m, in \u001b[0;36mCachingFileManager.acquire_context\u001b[1;34m(self, needs_lock)\u001b[0m\n\u001b[0;32m    194\u001b[0m \u001b[39m@contextlib\u001b[39m\u001b[39m.\u001b[39mcontextmanager\n\u001b[0;32m    195\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39macquire_context\u001b[39m(\u001b[39mself\u001b[39m, needs_lock\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m):\n\u001b[0;32m    196\u001b[0m     \u001b[39m\"\"\"Context manager for acquiring a file.\"\"\"\u001b[39;00m\n\u001b[1;32m--> 197\u001b[0m     file, cached \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_acquire_with_cache_info(needs_lock)\n\u001b[0;32m    198\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m    199\u001b[0m         \u001b[39myield\u001b[39;00m file\n",
-      "File \u001b[1;32mc:\\Users\\cooleyky\\Anaconda3\\lib\\site-packages\\xarray\\backends\\file_manager.py:215\u001b[0m, in \u001b[0;36mCachingFileManager._acquire_with_cache_info\u001b[1;34m(self, needs_lock)\u001b[0m\n\u001b[0;32m    213\u001b[0m     kwargs \u001b[39m=\u001b[39m kwargs\u001b[39m.\u001b[39mcopy()\n\u001b[0;32m    214\u001b[0m     kwargs[\u001b[39m\"\u001b[39m\u001b[39mmode\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_mode\n\u001b[1;32m--> 215\u001b[0m file \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_opener(\u001b[39m*\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_args, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m    216\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_mode \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mw\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[0;32m    217\u001b[0m     \u001b[39m# ensure file doesn't get overridden when opened again\u001b[39;00m\n\u001b[0;32m    218\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_mode \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39ma\u001b[39m\u001b[39m\"\u001b[39m\n",
-      "File \u001b[1;32msrc\\netCDF4\\_netCDF4.pyx:2463\u001b[0m, in \u001b[0;36mnetCDF4._netCDF4.Dataset.__init__\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32msrc\\netCDF4\\_netCDF4.pyx:2026\u001b[0m, in \u001b[0;36mnetCDF4._netCDF4._ensure_nc_success\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mPermissionError\u001b[0m: [Errno 13] Permission denied: b'c:\\\\Users\\\\cooleyky\\\\Documents\\\\GitHub\\\\qartod_testing\\\\data\\\\interim'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# something along the lines of write_nc(), xr.save_dataset?\n",
     "# call the data file datasets_for_testing.nc \n",
     "# I think we will test datasets in production and development separately, so maybe making separate files for those types\n",
-    "ds_dev.to_netcdf(path='../data/interim/')"
+    "interim_data = os.path.relpath('../data/interim')\n",
+    "\n",
+    "dev_filename = '-'.join(('dev',ds_dev.id,))+'.nc'\n",
+    "prod_filename = '-'.join(('prod',ds_prod.id,))+'.nc'\n",
+    "\n",
+    "dev_path=os.path.join(interim_data, dev_filename)\n",
+    "prod_path=os.path.join(interim_data, prod_filename)\n",
+    "\n",
+    "ds_dev.to_netcdf(path=dev_path)\n",
+    "ds_prod.to_netcdf(path=prod_path)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8355bfe8",
+   "id": "96f6bd5c",
    "metadata": {},
    "outputs": [],
    "source": []
