Edit header formatting in notebook 02

--- a/notebooks/02-local-QARTOD-test.ipynb
+++ b/notebooks/02-local-QARTOD-test.ipynb
@@ -79,11 +79,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7ca8706f",
    "metadata": {},
    "source": [
-    "## 2: create data stream URL"
+    "### 2: create data stream URL"
    ]
   },
   {
@@ -103,43 +104,48 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fdcd8646",
    "metadata": {},
    "source": [
-    "## 3: collect test QARTOD value tables"
+    "### 3: collect test QARTOD value tables"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9b119cdf",
    "metadata": {},
    "source": [
-    "## 4: run QARTOD tests locally"
+    "### 4: run QARTOD tests locally"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "987de098",
    "metadata": {},
    "source": [
-    "## 5: download expected results via M2M"
+    "### 5: download expected results via M2M"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a0e41d3f",
    "metadata": {},
    "source": [
-    "## 6: identify differences in results"
+    "### 6: identify differences in results"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9d6e5d5e",
    "metadata": {},
    "source": [
-    "## 7: export differing values to CSV with relevant metadata\n",
+    "### 7: export differing values to CSV with relevant metadata\n",
     "metadata could include: date & time, sensor, node, site, local & expected test results... whatever"
    ]
   },
