Edit notebook 02 title, description, and outline

--- a/notebooks/02-local-QARTOD-test.ipynb
+++ b/notebooks/02-local-QARTOD-test.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "838577ce",
+   "metadata": {},
+   "source": [
+    "# Run QARTOD Test on Locally Saved Data\n",
+    "\n",
+    "In this notebook we will load locally saved data from the interim data folder, extract QARTOD test parameters from spreadsheets on the OOI GitHub, run the QARTOD climatology and gross range tests on the imported data, and save the test results to the processed data folder.\n",
+    "\n",
+    "More info about QARTOD tests and the ioos_qc module can be found from the [Integrated Ocean Observing System website](https://ioos.noaa.gov/project/qartod/) and [Python module documentation](https://ioos.github.io/ioos_qc/), respectively."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f9f95658",
    "metadata": {},
@@ -26,7 +39,14 @@
     "import xarray as xr\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
-    "import sys"
+    "import sys\n",
+    "\n",
+    "# Import IOOS module with QARTOD tests\n",
+    "import ioos_qc\n",
+    "\n",
+    "# Import dask tools and ProgressBar\n",
+    "import dask\n",
+    "from dask.diagnostics import ProgressBar"
    ]
   },
   {
@@ -56,35 +76,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "91e07d51",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import dask tools and ProgressBar\n",
-    "import dask\n",
-    "from dask.diagnostics import ProgressBar"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "034f93a5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import IOOS module with QARTOD tests\n",
-    "import ioos_qc"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "7ca8706f",
    "metadata": {},
    "source": [
-    "### 2: create data stream URL"
+    "### Load locally saved data"
    ]
   },
   {
@@ -109,8 +106,16 @@
    "id": "fdcd8646",
    "metadata": {},
    "source": [
-    "### 3: collect test QARTOD value tables"
+    "### Collect test QARTOD value tables"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31ca9485",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "attachments": {},
@@ -118,8 +123,16 @@
    "id": "9b119cdf",
    "metadata": {},
    "source": [
-    "### 4: run QARTOD tests locally"
+    "### Run QARTOD tests locally"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d093c4e2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "attachments": {},
@@ -127,26 +140,7 @@
    "id": "987de098",
    "metadata": {},
    "source": [
-    "### 5: download expected results via M2M"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "a0e41d3f",
-   "metadata": {},
-   "source": [
-    "### 6: identify differences in results"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "9d6e5d5e",
-   "metadata": {},
-   "source": [
-    "### 7: export differing values to CSV with relevant metadata\n",
-    "metadata could include: date & time, sensor, node, site, local & expected test results... whatever"
+    "### Save test results to processed data folder"
    ]
   },
   {
