Edit outline of notebook 03

--- a/notebooks/03-Compare-local-test-with-OOINet-output.ipynb
+++ b/notebooks/03-Compare-local-test-with-OOINet-output.ipynb
@@ -68,6 +68,33 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "ec35d745",
+   "metadata": {},
+   "source": [
+    "### Define reference designator and file paths for chosen variable"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e8fcb2ee",
+   "metadata": {},
+   "source": [
+    "### Load test QARTOD test flags from local processed dataset"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "a3193400",
+   "metadata": {},
+   "source": [
+    "### Extract expected QC results from local interim dataset"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3e6e2063",
    "metadata": {},
@@ -76,11 +103,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "d3f1d9c6",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### Identify differences in results"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "dc3016fc",
+   "metadata": {},
+   "source": [
+    "### Export differing values to CSV with relevant metadata\n",
+    "metadata could include: date & time, sensor, node, site, local & expected test results... whatever"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ca1c582",
+   "metadata": {},
    "source": []
   }
  ],
