Load locally saved interim data in notebook 02

--- a/notebooks/02-local-QARTOD-test.ipynb
+++ b/notebooks/02-local-QARTOD-test.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import OOINet library\n",
+    "# Import OOINet library - might delete\n",
     "sys.path.append(\"c:\\\\Users\\\\cooleyky\\\\Documents\\\\GitHub\\\\OOINet\") # this is what was missing from the steps I followed to install ooinet and ooi-data-explorations as local dev repo\n",
     "from ooinet import M2M\n",
     "from ooinet.Instrument.common import process_file"
@@ -69,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import functions from ooi-data-explorations library\n",
+    "# Import functions from ooi-data-explorations library - might delete\n",
     "sys.path.append(\"c:\\\\Users\\\\cooleyky\\\\Documents\\\\GitHub\\\\ooi-data-explorations\\\\python\") # why did the initial install not include this?\n",
     "from ooi_data_explorations.uncabled.process_dosta import dosta_datalogger\n",
     "from ooi_data_explorations.combine_data import combine_datasets"
@@ -91,13 +91,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# API username and token\n",
-    "# site\n",
-    "# node\n",
-    "# sensor\n",
-    "# dates/deployment\n",
-    "# gold copy base URL\n",
-    "datapath = (/).join(base,site,node,sensor,deployment)"
+    "# Use reference designator, data stream, and method to build file name and path for chosen dataset\n",
+    "\n",
+    "site = \"CP01CNSM\"                                   # Coastal Pioneer Array (NES) - Central Surface Mooring\n",
+    "node = \"MFD37\"                                      # \n",
+    "sensor = \"03-CTDBPD000\"                             # CTD Bottom-pumped\n",
+    "method = \"recovered_inst\"                           # non-decimated data from recovered instrument\n",
+    "stream = \"ctdbp_cdef_instrument_recovered\"          # name of data stream\n",
+    "\n",
+    "refdes = '-'.join((site,node,sensor))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44e3a492",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Build filename and path to interim data\n",
+    "# This whole cell is something that would be good to turn into a function in the source code since we also repeat a similar process in notebook 01\n",
+    "\n",
+    "dev_filename = '-'.join(('dev',refdes,method,stream))+'.nc'             # build ds_dev filename from dataset attributes\n",
+    "prod_filename = '-'.join(('prod',refdes,method,stream))+'.nc'           # ds_prod filename from dataset attribute\n",
+    "\n",
+    "interim_data = os.path.relpath('../data/interim')                       # path to interim data folder from notebook folder\n",
+    "\n",
+    "dev_path=os.path.join(interim_data, dev_filename)                       # build full relative path with ds_dev filename\n",
+    "prod_path=os.path.join(interim_data, prod_filename)                     # repeat for ds_prod"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad6c3442",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load data from .nc files\n",
+    "ds_prod = xr.open_dataset(prod_path)\n",
+    "ds_dev = xr.open_dataset(dev_path)"
    ]
   },
   {
