Add explanation for using dev packages locally

--- a/notebooks/01-Request-and-download-data.ipynb
+++ b/notebooks/01-Request-and-download-data.ipynb
@@ -16,6 +16,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "75d71717",
    "metadata": {},
@@ -51,6 +52,49 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "f208f7bb",
+   "metadata": {},
+   "source": [
+    "### Using OOINet and ooi-data-explorations libraries locally\n",
+    "To use this notebook as-is, users should fork the OOINet and ooi-data-explorations GitHub repos and clone these to their local GitHub directory. The README for ooi-data-explorations has a detailed description for installing the python library as a local development package [here][https://github.com/oceanobservatories/ooi-data-explorations/tree/master/python#obtaining-the-code-and-configuring-the-environment]. These instructions will add the path to ooi-data-explorations to the system path in the resulting ooi environment. Since we use both the OOINet and ooi-data-explorations libraries in this notebook, I like to amend the last step to add both libraries to the path of my base environment. \n",
+    "\n",
+    "Instead of:\n",
+    "\n",
+    "    # configure the OOI python environment\n",
+    "    conda env create -f environment.yml\n",
+    "    conda init # might be required for windows users if environment is not active\n",
+    "    conda activate ooi\n",
+    "\n",
+    "    # you can check the active environment by running\n",
+    "    conda env list\n",
+    "\n",
+    "    # install the package as a local development package\n",
+    "    conda develop .\n",
+    "\n",
+    "I would do:\n",
+    "\n",
+    "    # Check that ooi environment was successfully created\n",
+    "    conda activate ooi\n",
+    "    conda env list\n",
+    "\n",
+    "    # install the package as a local development package in ooi environment\n",
+    "    conda develop .\n",
+    "    \n",
+    "    # Exit the ooi environment\n",
+    "    conda deactivate\n",
+    "    conda env list      # no environments should have an \"*\" next to it at this point\n",
+    "\n",
+    "    # install the package as a local development package in base environment\n",
+    "    conda develop .\n",
+    "\n",
+    "Where `.` denotes the current working directory, so users will want to make sure they are still in their local `GitHub/ooi-data-explorations/python/` directory or   `GitHub/OOINet/` directory at this step.\n",
+    "\n",
+    "While creating the environment and activating it just to deactivate the environment seems strange, I like having these environments to use later if needed."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 107,
    "id": "c8cc4f69",
@@ -58,8 +102,6 @@
    "outputs": [],
    "source": [
     "# Import OOINet library\n",
-    "\n",
-    "sys.path.append(\"c:\\\\Users\\\\cooleyky\\\\Documents\\\\GitHub\\\\OOINet\") # this is what was missing from the steps I followed to install ooinet and ooi-data-explorations as local dev repo\n",
     "from ooinet import M2M\n",
     "from ooinet.Instrument.common import process_file"
    ]
@@ -72,8 +114,6 @@
    "outputs": [],
    "source": [
     "# Import functions from ooi-data-explorations library\n",
-    "\n",
-    "sys.path.append(\"c:\\\\Users\\\\cooleyky\\\\Documents\\\\GitHub\\\\ooi-data-explorations\\\\python\") # why did the initial install not include this?\n",
     "from ooi_data_explorations.uncabled.process_dosta import dosta_datalogger\n",
     "from ooi_data_explorations.combine_data import combine_datasets\n",
     "from ooi_data_explorations import common as ooi_common"
@@ -3345,6 +3385,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "81992ff3",
    "metadata": {},
@@ -8735,6 +8776,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bcf34610",
    "metadata": {},
