Fix markdown syntax for link

--- a/notebooks/01-Request-and-download-data.ipynb
+++ b/notebooks/01-Request-and-download-data.ipynb
@@ -58,7 +58,7 @@
    "metadata": {},
    "source": [
     "### Using OOINet and ooi-data-explorations libraries locally\n",
-    "To use this notebook as-is, users should fork the OOINet and ooi-data-explorations GitHub repos and clone these to their local GitHub directory. The README for ooi-data-explorations has a detailed description for installing the python library as a local development package [here][https://github.com/oceanobservatories/ooi-data-explorations/tree/master/python#obtaining-the-code-and-configuring-the-environment]. These instructions will add the path to ooi-data-explorations to the system path in the resulting ooi environment. Since we use both the OOINet and ooi-data-explorations libraries in this notebook, I like to amend the last step to add both libraries to the path of my base environment. \n",
+    "To use this notebook as-is, users should fork the OOINet and ooi-data-explorations GitHub repos and clone these to their local GitHub directory. The README for ooi-data-explorations has a detailed description for installing the python library as a local development package [here](https://github.com/oceanobservatories/ooi-data-explorations/tree/master/python#obtaining-the-code-and-configuring-the-environment). These instructions will add the path to ooi-data-explorations to the system path in the resulting ooi environment. Since we use both the OOINet and ooi-data-explorations libraries in this notebook, I like to amend the last step to add both libraries to the path of my base environment. \n",
     "\n",
     "Instead of:\n",
     "\n",
