Fix sensor and node assignment

--- a/notebooks/11-Deep-dive-CP01CNSM-RID26-08-SPKIRB000.ipynb
+++ b/notebooks/11-Deep-dive-CP01CNSM-RID26-08-SPKIRB000.ipynb
@@ -11,13 +11,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "refdes = 'CP01CNSM-RID26-08-SPKIRB000'\n",
     "\n",
-    "site, sensor, node = refdes.split('-', 2)"
+    "site, node, sensor = refdes.split('-', 2)"
    ]
   },
   {
