Import libraries and revise data download notebook

--- a/notebooks/01-Request-and-download-data.ipynb
+++ b/notebooks/01-Request-and-download-data.ipynb
@@ -93,7 +93,9 @@
     "\n",
     "Where `.` denotes the current working directory, so users will want to make sure they are still in their local `GitHub/ooi-data-explorations/python/` directory or   `GitHub/OOINet/` directory at this step.\n",
     "\n",
-    "While creating the environment and activating it just to deactivate the environment seems strange, I like having these environments to use later if needed."
+    "While creating the environment and activating it just to deactivate the environment seems strange, I like having these environments to use later if needed. \n",
+    "\n",
+    "If conda stalls while creating the ooinet environment, that might be caused by libraries in the environment file that are not compatible with your operating system. I start with removing the package build information, and if the problem persists but the error changes slightly then I comment out the problem packages."
    ]
   },
   {
