--- a/notebooks/11-Deep-dive-CP01CNSM-RID26-08-SPKIRB000.ipynb
+++ b/notebooks/11-Deep-dive-CP01CNSM-RID26-08-SPKIRB000.ipynb
@@ -11,13 +11,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "refdes = 'CP01CNSM-RID26-08-SPKIRB000'\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import xarray as xr\n",
+    "import os\n",
+    "import requests\n",
     "\n",
-    "site, node, sensor = refdes.split('-', 2)"
+    "from ooinet import M2M\n",
+    "\n",
+    "from qartod_testing.timeseries import nanfill_time_gaps"
    ]
   },
   {
@@ -25,7 +31,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Set parameters for data request \n",
+    "refdes = 'CP01CNSM-RID26-08-SPKIRB000'\n",
+    "methods = [\"telemetered\", \"recovered_host\", \"recovered_inst\"]\n",
+    "# stream = \"ctdbp_cdef_instrument_recovered\"          # name of data stream\n",
+    "\n",
+    "\n",
+    "site, node, sensor = refdes.split('-', 2)"
+   ]
   }
  ],
  "metadata": {
